--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,9 +58,9 @@ const heroPanels = [
           Turing AI for Science
         </h1>
         <p class="mt-4 text-neutral-300">Description.</p>
-        <p class="mt-6 text-neutral-300">The Alan Turing Institute, Fundamental Research</p>
-        <p class="text-neutral-300">Date</p>
-        <p class="text-neutral-300">Location</p>
+        <p class="mt-6 text-neutral-300">Organiser: The Alan Turing Institute, Fundamental Research</p>
+        <p class="text-neutral-300">Date: March 31st, 2026 </p>
+        <p class="text-neutral-300">Location: The Royal Society, London</p>
       </div>
 
       {
