--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ const heroPanels = [
         <h1 class="mt-0 text-3xl sm:text-4xl font-semibold tracking-tight">
           Turing AI for Science
         </h1>
-        <p class="mt-4 text-neutral-300">Description.</p>
+        <!-- <p class="mt-4 text-neutral-300">Description.</p> -->
         <p class="mt-6 text-neutral-300">Organiser: The Alan Turing Institute, Fundamental Research</p>
         <p class="text-neutral-300">Date: March 31st, 2026 </p>
         <p class="text-neutral-300">Location: The Royal Society, London</p>
