Minor revisions to content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const heroPanels = [
 
       <div class="flex-1 flex flex-col justify-center">
         <h1 class="mt-0 text-4xl sm:text-5xl md:text-6xl font-bold tracking-tight text-white drop-shadow whitespace-nowrap">
-          Turing AI for Science
+          Turing AI for Science Workshop
         </h1>
         <!-- <p class="mt-4 text-neutral-300">Description.</p> -->
         <p class="mt-6 text-lg font-medium text-neutral-300 drop-shadow">Organiser: The Alan Turing Institute, Fundamental Research</p>
