Update date format

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ const heroPanels = [
         </h1>
         <!-- <p class="mt-4 text-neutral-300">Description.</p> -->
         <p class="mt-6 text-lg font-medium text-neutral-300 drop-shadow">Organiser: The Alan Turing Institute, Fundamental Research</p>
-        <p class="text-lg font-medium text-neutral-300 drop-shadow">Date: March 31st, 2026 </p>
+        <p class="text-lg font-medium text-neutral-300 drop-shadow">Date: 31 March 2026</p>
         <p class="text-lg font-medium text-neutral-300 drop-shadow">Location: The Royal Society, London</p>
       </div>
 
