--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,14 +51,14 @@ const heroPanels = [
 
     <div class="relative z-10 mx-auto flex h-screen w-full max-w-3xl flex-col justify-between px-6 py-8">
       <div class="flex items-center justify-between">
-        <img src={`${base}logo@2x.png`} alt="Logo 1" class="h-20 sm:h-24 w-auto" />
-        <!-- Add additional logo here -->
+        <!-- Uncomment for logos here -->
+        <!-- <img src={`${base}logo@2x.png`} alt="Logo 1" class="h-20 sm:h-24 w-auto" /> -->
         <!-- <img src="/logo@2x.png" alt="Logo 2" class="h-10 sm:h-12 w-auto" /> -->
       </div>
 
       <div class="flex-1 flex flex-col justify-center">
         <h1 class="mt-0 text-4xl sm:text-5xl md:text-6xl font-bold tracking-tight text-white drop-shadow whitespace-nowrap">
-          Turing AI for Science Workshop
+          Turing AI for<br>Science Workshop
         </h1>
         <!-- <p class="mt-4 text-neutral-300">Description.</p> -->
         <p class="mt-6 text-lg font-medium text-neutral-300 drop-shadow">Organiser: The Alan Turing Institute, Fundamental Research</p>
