--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,9 +51,14 @@ const heroPanels = [
 
     <div class="relative z-10 mx-auto flex h-screen w-full max-w-3xl flex-col justify-between px-6 py-8">
       <div class="flex items-center justify-between">
-        <!-- Uncomment for logos here -->
-        <!-- <img src={`${base}logo@2x.png`} alt="Logo 1" class="h-20 sm:h-24 w-auto" /> -->
-        <!-- <img src="/logo@2x.png" alt="Logo 2" class="h-10 sm:h-12 w-auto" /> -->
+        <!-- Logos: comment/uncomment -->
+        <!-- Large version -->
+        <!-- <img src={`${base}ATI_logo_white_W500px.png`} alt="Logo 1" class="h-20 sm:h-24 w-auto" /> -->
+        <!-- <img src={`${base}logo@2x.png`} alt="Logo 2" class="h-20 sm:h-24 w-auto" /> -->
+
+        <!-- Small version -->
+        <img src={`${base}ATI_logo_white_W500px.png`} alt="Logo 1" class="h-16 sm:h-20 w-auto" />
+        <!-- <img src={`${base}logo@2x.png`} alt="Logo 2" class="h-16 sm:h-20 w-auto" /> -->
       </div>
 
       <div class="flex-1 flex flex-col justify-center">
